# AlphaFlow

./: .gitignore  README.md  auto_build_test.sh  setup_alphaflow.sh  update_and_run.sh  update_and_run_ios_static.sh  update_and_run_ipad.sh
alphaflow/backend/: Cargo.toml
alphaflow/backend/alphaflow-engine/engine/: Cargo.toml
alphaflow/backend/alphaflow-engine/engine/src/: lib.rs
alphaflow/backend/alphaflow-engine/engine/tests/: integration_test.rs
alphaflow/backend/alphaflow-engine/handlers/: Cargo.toml
alphaflow/backend/alphaflow-engine/handlers/src/: lib.rs
alphaflow/backend/alphaflow-engine/orch/: Cargo.toml
alphaflow/backend/alphaflow-engine/orch/src/: orchestrator.rs
alphaflow/backend/alphaflow-engine/queue/: Cargo.toml
alphaflow/backend/alphaflow-engine/queue/src/: lib.rs  task_dispatcher.rs  task_queue.rs  task_runner.rs
alphaflow/backend/alphaflow-engine/store/: Cargo.toml
alphaflow/backend/alphaflow-engine/store/src/: lib.rs  model.rs  task_store.rs
alphaflow/backend/alphaflow-fbr/: Cargo.toml
alphaflow/backend/alphaflow-ffi/: AlphaFlow.toml  Cargo.toml
alphaflow/backend/alphaflow-ffi/src/: ffi_util.rs  global_pool.rs  lib.rs  user_ffi.rs  workflow_ffi.rs
alphaflow/backend/alphaflow-jmes/: Cargo.toml  build.rs
alphaflow/backend/alphaflow-jmes/src/: ast.rs  errors.rs  expression.rs  functions.rs  interpreter.rs  jmes_runtime.rs  lexer.rs  lib.rs  parser.rs  runtime.rs  variable.rs
alphaflow/backend/alphaflow-jmes/tests/: compliance.rs
alphaflow/backend/alphaflow-nodes/: Cargo.toml  checkbox.md  ini_checkbox.md
alphaflow/backend/alphaflow-nodes/src/: input_mapping.rs  lib.rs  node.rs  node_type.rs  registry.rs  registry_helper.rs
alphaflow/backend/alphaflow-nodes/src/http/: http_handler.rs  http_params.rs  mod.rs
alphaflow/backend/alphaflow-nodes/src/openai/: mod.rs  openai_handler.rs  openai_params.rs
alphaflow/backend/alphaflow-sqlite/: Cargo.toml  alphaflow_db.db  diesel.toml  test.db
alphaflow/backend/alphaflow-sqlite/migrations/2025-02-18-113847_create_workflows_executions_users/: down.sql  up.sql
alphaflow/backend/alphaflow-sqlite/src/: lib.rs  naive_dt_seconds.rs  schema.rs
alphaflow/backend/alphaflow-sqlite/src/db/: execution_ops.rs  mod.rs  shared_workflow_ops.rs  user_ops.rs  workflow_ops.rs
alphaflow/backend/alphaflow-sqlite/src/models/: execution.rs  mod.rs  shared_workflow.rs  user.rs  workflow.rs
alphaflow/backend/alphaflow-user/: AlphaFlow.toml  build.rs
alphaflow/backend/alphaflow-user/src/: event_handler.rs  event_map.rs  lib.rs  notification.rs
alphaflow/backend/alphaflow-user/src/entities/: auth.rs  date_time.rs  import_data.rs  realtime.rs  reminder.rs  user_profile.rs  user_setting.rs  workspace.rs
alphaflow/backend/alphaflow-user/src/entities/parser/: user_email.rs  user_icon.rs  user_id.rs  user_name.rs  user_openai_key.rs  user_password.rs  user_stability_ai_key.rs
alphaflow/backend/alphaflow-user/src/migrations/: doc_key_with_workspace.rs  document_empty_content.rs  migration.rs  mod.rs  session_migration.rs  util.rs  workspace_and_favorite_v1.rs  workspace_trash_v1.rs
alphaflow/backend/alphaflow-user/src/services/: authenticate_user.rs  billing_check.rs  cloud_config.rs  db.rs
alphaflow/backend/alphaflow-user/src/services/data_import/: alphaflow_data_import.rs  mod.rs
alphaflow/backend/alphaflow-user/src/services/sqlite_sql/: member_sql.rs  user_sql.rs  workspace_sql.rs
alphaflow/backend/alphaflow-user/src/user_manager/: manager.rs  manager_history_user.rs  manager_user_awareness.rs  manager_user_encryption.rs  manager_user_workspace.rs  user_login_state.rs
alphaflow/backend/alphaflow-workflow/: Cargo.toml  init_checklist.md
alphaflow/backend/alphaflow-workflow/src/: constants.rs  directed_graph.rs  executor.rs  global_state.rs  jmes_runtime.rs  jmse_expression.rs  json_expression.rs  lib.rs  transformation.rs  waiting_queue.rs  workflow.rs
alphaflow/backend/build-tool/alphaflow-ast/: Cargo.toml
alphaflow/backend/build-tool/alphaflow-ast/src/: ast.rs  ctxt.rs  event_attrs.rs  lib.rs  node_attrs.rs  pb_attrs.rs  symbol.rs  ty_ext.rs
alphaflow/backend/build-tool/alphaflow-codegen/: Cargo.toml
alphaflow/backend/build-tool/alphaflow-codegen/src/: alphaflow_toml.rs  ast.rs  lib.rs
alphaflow/backend/build-tool/alphaflow-codegen/src/dart_event/: dart_event.rs  event_template.tera
alphaflow/backend/build-tool/alphaflow-codegen/src/protobuf_file/: ast.rs  mod.rs  proto_info.rs
alphaflow/backend/build-tool/alphaflow-codegen/src/protobuf_file/template/proto_file/: enum_template.rs  struct_template.rs
alphaflow/backend/build-tool/alphaflow-derive/: Cargo.toml
alphaflow/backend/build-tool/alphaflow-derive/src/: lib.rs
alphaflow/backend/build-tool/alphaflow-derive/src/dart_event/: mod.rs
alphaflow/backend/build-tool/alphaflow-derive/src/node/: mod.rs
alphaflow/backend/build-tool/alphaflow-derive/src/proto_buf/: deserialize.rs  enum_serde.rs  mod.rs  serialize.rs  util.rs
alphaflow/backend/data_service/: .env  Cargo.toml  diesel.toml
alphaflow/backend/data_service/migrations/2025-02-17-130749_create_users/: up.sql
alphaflow/backend/data_service/src/: lib.rs
alphaflow/backend/data_service/src/db/: user_ops.rs
alphaflow/backend/data_service/src/models/: user.rs
alphaflow/backend/data_service/src/schema/: mod.rs
alphaflow/frontend/: $PLIST_PATH  README.md  pubspec.yaml
alphaflow/frontend/android/app/: build.gradle
alphaflow/frontend/ios/: AlphaflowFFI.podspec  Podfile
alphaflow/frontend/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
alphaflow/frontend/ios/Runner/: AppDelegate.swift  Info.plist  MyRustWrapper.swift  Runner-Bridging-Header.h  RustBridge.h
alphaflow/frontend/ios/Runner.xcodeproj/: project.pbxproj
alphaflow/frontend/lib/: graph_demo_page.dart  login_page.dart  main.dart  register_page.dart  rust_binding.dart  workflow_page.dart
alphaflow/frontend/linux/: CMakeLists.txt  my_application.cc
alphaflow/frontend/web/: index.html  manifest.json
alphaflow/frontend/windows/: CMakeLists.txt
(+7 files in other folders)
