[package]
name = "alphaflow-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
alphaflow-sqlite = { path = "../alphaflow-sqlite" }
diesel = { version = "2.2.7", features = ["sqlite", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
once_cell = "1.17"
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }

[dev-dependencies]
cbindgen = "0.24"

