[package]
name = "alphaflow-jmes"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
rayon = "1"
parking_lot = "0.12"
slug = "0.1" 
log = "0.4"
env_logger = "0.9"
once_cell = "1.17"
thiserror = "1.0"

[features]
sync = []
specialized = []

[build-dependencies]
serde_json = "1"
slug = "0.1"