[package]
name = "alphaflow-sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.7", features = ["sqlite", "chrono", "r2d2"] }
r2d2 = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }