[package]
name = "alphaflow-workflow"
version = "0.1.0"
edition = "2021"

[dependencies]
alphaflow-nodes = { path = "../alphaflow-nodes" }
alphaflow-jmes = { path = "../alphaflow-jmes" }
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
serde_with = "2.0"
async-trait = "0.1"
tokio = { version = "1.36", features = ["full"] }
regex = "1.9"
jaq-parse = "1.0.3"
jaq-core = "1.0.3"
jaq-interpret = "1.0.3"
log = "0.4"
env_logger = "0.9"
petgraph = "0.6"
itertools = "0.10"
thiserror = "1.0"