[package]
name = "alphaflow-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
orch = { path = "../orch" }
queue = { path = "../queue" }
store = { path = "../store" }
handlers = { path = "../handlers" }
alphaflow-nodes = { path = "../../alphaflow-nodes" } 
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.105"
dotenv = "0.15.0"